FIx ambiguous reference warnings in rider

--- a/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Ulearn.Common
+@using FormMethod = System.Web.Mvc.FormMethod
 @model UserViewModel
 
 <section class="login-and-registration-form profile-form">
