--- a/src/uLearn.Web/Views/Account/Profile.cshtml
+++ b/src/uLearn.Web/Views/Account/Profile.cshtml
@@ -4,6 +4,7 @@
 @using uLearn.Web.Microsoft.Owin.Security.VK
 @using uLearn.Web.Views.Shared
 @using Ulearn.Common
+@using FormMethod = System.Web.Mvc.FormMethod
 @model uLearn.Web.Controllers.ProfileModel
 
 @{
