--- a/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@model ManageUserViewModel
+﻿@using FormMethod = System.Web.Mvc.FormMethod
+@model ManageUserViewModel
 
 <section class="login-and-registration-form profile-form">
 	@using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { role = "form", @class = "form-horizontal" }))
