--- a/src/uLearn.Web/Views/Admin/Diagnostics.cshtml
+++ b/src/uLearn.Web/Views/Admin/Diagnostics.cshtml
@@ -1,5 +1,6 @@
 ﻿@using uLearn.Web.Controllers
 @using Ulearn.Common.Extensions
+@using FormMethod = System.Web.Mvc.FormMethod
 
 @model DiagnosticsModel
 
