--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -1,6 +1,7 @@
 ﻿@using uLearn.Web.Extensions
 @using Ulearn.Common.Extensions
 @using Ulearn.Core
+@using FormMethod = System.Web.Mvc.FormMethod
 @model uLearn.Web.Controllers.PackagesViewModel
 
 @{
