--- a/src/uLearn.Web/Views/Admin/_ManualCheckingQueueFilterForm.cshtml
+++ b/src/uLearn.Web/Views/Admin/_ManualCheckingQueueFilterForm.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Web.Mvc.Html
 @using uLearn.Web.Extensions
 @using Ulearn.Core.Courses.Slides.Quizzes
+@using FormMethod = System.Web.Mvc.FormMethod
 
 @model uLearn.Web.Controllers.ManualCheckingQueueViewModel
 
