--- a/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
@@ -4,6 +4,7 @@
 @using Ulearn.Common
 @using Ulearn.Common.Extensions
 @using Ulearn.Core.Extensions
+@using FormMethod = System.Web.Mvc.FormMethod
 @model CourseStatisticPageModel
 
 @functions {
