--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -17,6 +17,7 @@
 @using Ulearn.Core.Courses.Slides.Quizzes.Blocks
 @using Ulearn.VideoAnnotations.Api.Models.Parameters.Annotations
 @using Ulearn.VideoAnnotations.Api.Models.Responses.Annotations
+@using HtmlHelper = System.Web.Mvc.HtmlHelper
 @* ReSharper restore RedundantUsingDirective *@
 
 
