--- a/src/uLearn.Web/Views/Exercise/SubmissionsPanel.cshtml
+++ b/src/uLearn.Web/Views/Exercise/SubmissionsPanel.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Database.Models
 @using uLearn.Web.Extensions
+@using SelectListItem = System.Web.Mvc.SelectListItem
 @model uLearn.Web.Controllers.ExerciseSubmissionsPanelModel
 
 @functions
