--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -6,6 +6,8 @@
 @using Ulearn.Common.Extensions
 @using Ulearn.Core.Courses.Slides.Quizzes
 @using Ulearn.Core.Courses.Slides.Quizzes.Blocks
+@using FormMethod = System.Web.Mvc.FormMethod
+@using MvcForm = System.Web.Mvc.Html.MvcForm
 
 @model QuizModel
 @{
