--- a/src/uLearn.Web/Views/Shared/Notifications.cshtml
+++ b/src/uLearn.Web/Views/Shared/Notifications.cshtml
@@ -11,6 +11,7 @@
 @using Ulearn.Core.Courses.Slides.Exercises
 @using Ulearn.Core.Courses.Slides.Quizzes
 @using Ulearn.Core.Extensions
+@using HtmlHelper = System.Web.Mvc.HtmlHelper
 
 @functions
 {
