--- a/src/uLearn.Web/Views/Admin/Comments.cshtml
+++ b/src/uLearn.Web/Views/Admin/Comments.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Database.Extensions
 @using Database.Models
+@using FormMethod = System.Web.Mvc.FormMethod
 @model uLearn.Web.Controllers.AdminCommentsViewModel
 
 @{
