--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -1,4 +1,5 @@
-﻿@using Database.Models
+﻿@using System.Web.UI.WebControls
+@using Database.Models
 @using uLearn.Web.Extensions
 @using Ulearn.Common
 @using Ulearn.Common.Extensions
@@ -6,6 +7,8 @@
 @using Ulearn.Core.Courses.Slides.Exercises
 @using Ulearn.Core.Courses.Slides.Quizzes
 @using Ulearn.Core.Extensions
+@using FormMethod = System.Web.Mvc.FormMethod
+@using SelectListItem = System.Web.Mvc.SelectListItem
 
 @model UnitStatisticPageModel
 @{
