--- a/src/uLearn.Web/Views/Comments/SlideComments.cshtml
+++ b/src/uLearn.Web/Views/Comments/SlideComments.cshtml
@@ -8,6 +8,7 @@
 @using Ulearn.Common.Extensions
 @using Ulearn.Core.Courses.Slides
 @using Ulearn.Core.Courses.Slides.Exercises
+@using FormMethod = System.Web.Mvc.FormMethod
 
 @model SlideCommentsModel
 
