--- a/src/uLearn.Web/Views/Comments/_Comment.cshtml
+++ b/src/uLearn.Web/Views/Comments/_Comment.cshtml
@@ -2,6 +2,7 @@
 @using uLearn.Web.Extensions
 @using uLearn.Web.Views.Shared
 @using Ulearn.Core.Extensions
+@using FormMethod = System.Web.Mvc.FormMethod
 @model CommentViewModel
 
 @helper ReplyForm(Comment comment, bool isFormHidden, bool forInstructorsOnly)
