--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -32,60 +32,84 @@
             </p>
         </div>
     }
-    @using (Html.BeginForm("UploadCourse", "Admin", new { courseId = Model.Course.Id }, FormMethod.Post, new { enctype = "multipart/form-data", style = "margin-bottom: 10px" }))
+    @using (Html.BeginForm("UploadCourse", "Admin", new { courseId = Model.Course.Id }, FormMethod.Post, new { enctype = "multipart/form-data", style = "margin-bottom: 8px" }))
 	{
 		<input type="file" data-filename-placement="inside" class="btn" name="file" title="Выбрать архив с курсом" />
 		<input type="submit" class="btn btn-success" value="Загрузить"/>
 	}
 	@if (Model.CourseGit?.RepoUrl != null && Model.CourseGit?.PublicKey != null)
 	{
-		using (Html.BeginForm("UploadCoursesWithGit", "Admin", new { courseId = Model.Course.Id }, FormMethod.Post, new { @class = "form-inline", style = "margin-bottom: 10px" }))
+		<p style="margin: 8px 0">или</p>
+		using (Html.BeginForm("UploadCourseWithGit", "Admin", new { courseId = Model.Course.Id }, FormMethod.Post, new { @class = "form-inline", style = "margin-bottom: 20px" }))
 		{
 			@Html.AntiForgeryToken()
-			<input type="submit" class="btn btn-success" value="Загрузить из git"/>
-			<div class="spoiler_links btn btn-primary">Настройки</div>
+			<input type="submit" class="btn btn-success" style="width: 180px" value="Загрузить из git"/>
+			<a href="" class="spoiler_links" style="vertical-align: middle; margin-left: 5px;">Настроить</a>
+			<a target="_blank" style="vertical-align: middle; margin-left: 5px;" href="https://docs.google.com/document/d/1ND3oOuoivJa93YKeDriBQHfsgCdfy6ss6Vho6H4S7bs/edit?usp=sharing">Справка</a>
+			<div><small>Будет загружен курс из репоз. @(Model.CourseGit?.RepoUrl) из ветки @(Model.CourseGit.Branch ?? "master")</small></div>
 		}
 	}
 	else
 	{
-		<div class="spoiler_links btn btn-xs btn-primary" style="margin-bottom: 10px">Настройки репозитория</div>
+		<div class="spoiler_links btn btn-xs btn-primary" style="margin-bottom: 10px">Настроить интеграцию с git</div>
+		<a target="_blank" href="https://docs.google.com/document/d/1tL_D2SGIv163GpVVr5HrZTBEgcMk5shCKN5J6le4pTc/edit?usp=sharing" class="btn btn-link" style="vertical-align:4px">Cправка</a>
 	}
-	<div class="spoiler_body @(Model.CourseGit?.RepoUrl != null && Model.CourseGit?.PublicKey == null ? "" : "collapse")">
-		@using (Html.BeginForm("SaveCourseRepoSettings", "Admin", new { courseId = Model.Course.Id }, FormMethod.Post, new { @class = "form-inline", style = "margin-bottom: 10px; display: inline-block" }))
+	<div class="spoiler_body @(Model.OpenStep1 ? "" : "collapse")">
+		@using (Html.BeginForm("SaveCourseRepoSettings", "Admin", new { courseId = Model.Course.Id }, FormMethod.Post))
 		{
 			@Html.AntiForgeryToken()
-			<input type="text" class="form-control" name="repoUrl" value="@(Model.CourseGit?.RepoUrl)" placeholder="@("git@*.git")"/>
-			<input type="text" class="form-control" name="branch" value="master" placeholder="Ветка или hash"/>
-			<input type="text" class="form-control" name="pathToCourseXml" value="@(Model.CourseGit?.PathToCourseXml)" placeholder="Путь до course.xml"/>
-			<div class="form-group hidden-xs">
-				<div class="checkbox checkbox-default" style="padding-left:0">
-					@Html.CheckBox("isWebhookEnabled", (Model.CourseGit?.IsWebhookEnabled ?? false));
-					<label for="isWebhookEnabled">Включить вебхук</label>
+			<div class="panel panel-default">
+				<div class="panel-heading">Шаг 1 из 2</div>
+				<div class="panel-body">
+					<div class="form-group">
+						<label for="repoUrl">Git url (github, gitlab)</label>
+						<input type="text" class="form-control" id="repoUrl" name="repoUrl" value="@(Model.CourseGit?.RepoUrl)" placeholder="@("git@*.git")"/>
+					</div>
+					<div class="form-group">
+						<label for="branch">Ветка</label>
+						<input type="text" class="form-control" id="branch" name="branch" value="master"/>
+					</div>
+					<div class="form-group">
+						<label for="pathToCourseXml">Путь до директории с course.xml</label>
+						<input type="text" class="form-control" id="pathToCourseXml" name="pathToCourseXml" value="@(Model.CourseGit?.PathToCourseXml)"/>
+					</div>
+					<div class="form-group hidden-xs">
+						<div class="checkbox checkbox-default">
+							@Html.CheckBox("isWebhookEnabled", (Model.CourseGit?.IsWebhookEnabled ?? false))
+							<label for="isWebhookEnabled">Загружать новые версии автоматически
+								<div class="form-text text-muted"><small>Webhook secret: @Model.GitSecret</small></div></label>
+						</div>
+					</div>
+					<button type="submit" name="submitButton" class="btn btn-success" value="Save">Сохранить</button>
+					<button type="submit" name="submitButton" class="btn btn-link" value="Remove">Удалить интеграцию</button>
 				</div>
 			</div>
-			<input type="submit" class="btn btn-success" value="Сохранить"/>
 		}
-		@if (Model.CourseGit?.RepoUrl != null) {
-			using (Html.BeginForm("GenerateCourseRepoKey", "Admin", new { courseId = Model.Course.Id, repoUrl = Model.CourseGit?.RepoUrl }, FormMethod.Post, new { @class = "form-inline", style = "margin-bottom: 10px; display: inline-block" }))
+		@if (Model.OpenStep2) {
+			using (Html.BeginForm("GenerateCourseRepoKey", "Admin", new { courseId = Model.Course.Id, repoUrl = Model.CourseGit?.RepoUrl }, FormMethod.Post))
 			{
 				@Html.AntiForgeryToken()
-				<input type="submit" class="btn @(Model.CourseGit?.PublicKey == null ? "btn-warning" : "btn-danger")" value="@(Model.CourseGit?.PublicKey == null ? "Получить ключ" : "Получить новый ключ")"/>
+				<div class="panel panel-default">
+					<div class="panel-heading">Шаг 2 из 2</div>
+					<div class="panel-body">
+						<label for="public-key">Добавьте этот deploy key в настройки репозитория, даже если ваш репозиторий публичный.</label> <a target="_blank" href="https://docs.google.com/document/d/1tL_D2SGIv163GpVVr5HrZTBEgcMk5shCKN5J6le4pTc/edit?usp=sharing">(справка)</a>
+						<textarea id="public-key" class="form-control" readonly style="height: 96px">@(Model.CourseGit?.PublicKey)</textarea>
+						<input type="submit" class="btn btn-xs btn-link" style="max-width: none; padding-left: 0" value="Перегенерировать ключ (старый перестанет работать)"/>
+					</div>
+				</div>
 			}
 		}
 		<script type="text/javascript">
-			$(document).ready(function(){
+			$(document).ready(function(e){
 				$('.spoiler_links').click(function(){
 					$('.spoiler_body').toggle('normal');
 					return false;
 				});
+				e.preventDefault();
 			});
 		</script>
 	</div>
-    @if (Model.ShowPublicGitKey && Model.CourseGit?.PublicKey != null)
-    {
-        <textarea class="form-control" readonly style="height: 96px">@(Model.CourseGit?.PublicKey)</textarea>
-    }
-	
+
 	@if (Model.Versions.Count > 0)
 	{
 		<h1>Загруженные версии</h1>
