Error message if deploy key is invalid

--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -25,7 +25,7 @@
     {
 	    <div class="course-loading-error">
             <p class="text-danger">
-                <b>Ошибка в&nbsp;архиве:</b> @Html.Raw(Model.Error.EscapeHtml().LineEndingsToBrTags())
+                <b>Ошибка:</b> @Html.Raw(Model.Error.EscapeHtml().LineEndingsToBrTags())
             </p>
             <p class="text-muted">
                 Непонятно, что произошло? Напишите нам на&nbsp;<a href="mailto:support@ulearn.me">support@ulearn.me</a>.
