rename slide types

--- a/src/Frontend/src/components/course/Navigation/NavigationItem/NavigationItem.less
+++ b/src/Frontend/src/components/course/Navigation/NavigationItem/NavigationItem.less
@@ -19,6 +19,7 @@
   &:hover {
     color: #ffffff;
     background-color: @linkColor;
+    text-decoration: none;
   }
 }
 
@@ -75,6 +76,7 @@
 
   .itemLink:hover & {
     color: #ffffff;
+    text-decoration: none;
   }
 }
 
@@ -85,6 +87,7 @@
 
   .itemLink:hover & {
     color: #ffffff;
+    text-decoration: none;
   }
 }
 
