--- a/src/Frontend/src/components/course/Navigation/Course/CourseNavigationHeader/CourseNavigationHeader.less
+++ b/src/Frontend/src/components/course/Navigation/Course/CourseNavigationHeader/CourseNavigationHeader.less
@@ -1,7 +1,7 @@
-@import "../../../../variables.less";
+@import "../../../../../variables.less";
 
 .root {
-  padding: 19px 17px 21px 14px;
+  padding: 19px 17px 21px 23px;
   border-bottom: 1px solid @borderColor;
 }
 
@@ -14,13 +14,6 @@
   margin: 0 0 16px;
   font-size: 32px;
   line-height: 34px;
-}
-
-.h2 {
-  margin: 0;
-  font-size: 24px;
-  line-height: 34px;
-  color: #000;
 }
 
 .description {
