--- a/src/Frontend/src/components/course/Navigation/Module/NavigationContent/NavigationContent.less
+++ b/src/Frontend/src/components/course/Navigation/Module/NavigationContent/NavigationContent.less
@@ -1,4 +1,4 @@
-@import "../../../../variables.less";
+@import "../../../../../variables.less";
 
 .root {
   padding-top: 11px;
@@ -7,15 +7,11 @@
 }
 
 .header {
-  margin: 0 19px 24px 23px;
+  margin: 0 19px 24px 57px;
   text-transform: uppercase;
   font-size: 10px;
   font-weight: lighter;
   line-height: 1.2;
   letter-spacing: 1.2px;
   color: @additionalColor;
-}
-
-.module {
-  margin-left: 57px;
 }
