Перенос RunCheckerJobApi в Core

--- a/src/uLearn.Web/Views/Sandbox/Index.cshtml
+++ b/src/uLearn.Web/Views/Sandbox/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Database.Models
-@using RunCheckerJob.Api
 @using uLearn.Web.Extensions
 @using Ulearn.Core
+@using Ulearn.Core.RunCheckerJobApi
 
 @model SubmissionsListModel
 
