--- a/src/Frontend/src/components/comments/Comment/Marks/Marks.less
+++ b/src/Frontend/src/components/comments/Comment/Marks/Marks.less
@@ -83,14 +83,11 @@
 
 .visibleOnDesktopAndTablet {
   @media (min-width: @maxPhoneWidth) {
-    overflow-y: hidden;
-    overflow-x: scroll;
+    overflow: hidden;
   }
 }
 .visibleOnPhone {
   @media (max-width: @maxPhoneWidth) {
-    overflow-y: hidden;
-    overflow-x: scroll;
-    overflow-scrolling: auto;
+    overflow: hidden;
   }
 }
