--- a/src/Frontend/src/components/common/Avatar/avatar.less
+++ b/src/Frontend/src/components/common/Avatar/avatar.less
@@ -8,14 +8,16 @@
 .color-avatar {
   color: #fff;
   text-align: center;
-  padding: 5px 0;
+  @media(max-width: @maxPhoneWidth) {
+    padding: 5px 0;
+  }
 }
 
 .big {
   font-size: 30px;
   font-weight: 500;
-  min-width: 55px;
-  height: 55px;
+  min-width: 45px;
+  height: 45px;
 
   @media(max-width: @maxPhoneWidth) {
     font-size: 20px;
