Fixed styles bugs

--- a/src/Frontend/src/components/comments/Comment/Comment.less
+++ b/src/Frontend/src/components/comments/Comment/Comment.less
@@ -24,6 +24,10 @@
   color: @disabledColor;
   font-size: 14px;
   cursor: default;
+
+  @media(max-width: @maxPhoneWidth) {
+    margin-top: 0;
+  }
 }
 
 .text {
