--- a/src/Frontend/src/components/course/Navigation/Course/CourseNavigationHeader/CourseNavigationHeader.less
+++ b/src/Frontend/src/components/course/Navigation/Course/CourseNavigationHeader/CourseNavigationHeader.less
@@ -11,6 +11,8 @@
 }
 
 .h1 {
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin: 0 0 16px;
   font-size: 32px;
   line-height: 34px;
@@ -24,6 +26,6 @@
 }
 
 .progressBarWrapper {
-  width: 67%;
+  width: 75%;
   margin-bottom: 11px;
 }
