--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -21,3 +21,9 @@
 @lightGrey: #E5E5E5;
 @whiteSmoke: #F2F2F2;
 @guideIconColor: #C8C7FE;
+@statusUnseenColor: #C4C4C4;
+@statusVeryBadColor: #F02F2F;
+@statusBadColor: #EB760A;
+@statusAverageColor: #F1C527;
+@statusGoodColor: #A1E236;
+@statusExcellentColor: #49B52A;
