--- a/src/Frontend/src/components/cards/Guides/guides.less
+++ b/src/Frontend/src/components/cards/Guides/guides.less
@@ -12,7 +12,7 @@
 .guidesElement::before {
   counter-increment: guidesCounter;
   content: counter(guidesCounter);
-  color: white;
+  color: #fff;
   background: @guideIconColor;
   border-radius: 50%;
   border: 1px solid @guideIconColor;
