--- a/src/Frontend/src/components/cards/UnitPage/UnitProgressBar/unitProgressBar.less
+++ b/src/Frontend/src/components/cards/UnitPage/UnitProgressBar/unitProgressBar.less
@@ -9,7 +9,7 @@
 .progressBarElement {
   color: white;
   overflow: hidden;
-  font-family: Segoe UI, serif;
+  font-family: @defaultFonts;
   text-align: center;
   font-size: 14px;
   line-height: 30px;
@@ -41,8 +41,8 @@
 }
 
 .progressBarTitle {
-  color: #808080;
-  font-family: Segoe UI;
+  color: @additionalColor;
+  font-family: @defaultFonts;
   font-size: 10px;
   line-height: 30px;
   letter-spacing: 1.2px;
