--- a/src/Frontend/src/components/cards/UnitPage/unitPage.less
+++ b/src/Frontend/src/components/cards/UnitPage/unitPage.less
@@ -1,5 +1,7 @@
+@import "./../../../variables";
+
 .title {
-  font-family: Segoe UI;
+  font-family: @defaultFonts;
   font-size: 32px;
   line-height: 40px;
   font-weight: normal;
