--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -11,6 +11,7 @@
 @successColor: #228007;
 @green: #5cb85c;
 @blue: #0087d5;
+@lightViolet: #C8C7FE;
 @linkColor: #3072C4;
 @linkHoverColor: #23527c;
 @dimgray: #696969;
@@ -20,10 +21,13 @@
 @geinsboro: #DADADA;
 @lightGrey: #E5E5E5;
 @whiteSmoke: #F2F2F2;
-@guideIconColor: #C8C7FE;
+
+@guideIconColor: @lightViolet;
 @statusUnseenColor: #C4C4C4;
 @statusVeryBadColor: #F02F2F;
 @statusBadColor: #EB760A;
 @statusAverageColor: #F1C527;
 @statusGoodColor: #A1E236;
 @statusExcellentColor: #49B52A;
+
+@defaultFonts: "Segoe UI", "Helvetica Neue", Roboto, Arial, sans-serif;
