Implemented short questions and added to UnitPage.js
Added new color to variables, updated stories of unit page,added stories ans styles to short questions

--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -20,6 +20,7 @@
 @disabledColor: #A0A0A0;
 @geinsboro: #DADADA;
 @lightGrey: #E5E5E5;
+@darkGrey: #C4C4C4;
 @whiteSmoke: #F2F2F2;
 
 @guideIconColor: @lightViolet;
