--- a/src/Frontend/src/components/cards/UnitPage/unitPage.less
+++ b/src/Frontend/src/components/cards/UnitPage/unitPage.less
@@ -6,3 +6,13 @@
   line-height: 40px;
   font-weight: normal;
 }
+
+.progressBar {
+  position: relative;
+  top: 15px;
+}
+
+.shortQuestions {
+  position: relative;
+  top: 25px;
+}
