Refactored short questions,unit card and unit page

--- a/src/Frontend/src/components/cards/UnitPage/ShortQuestions/shortQuestions.less
+++ b/src/Frontend/src/components/cards/UnitPage/ShortQuestions/shortQuestions.less
@@ -22,6 +22,10 @@
   margin-bottom: 18px;
 }
 
+.questionText:hover {
+  cursor: pointer;
+}
+
 .questionText::before {
   width: 20px;
   height: 20px;
