--- a/src/Frontend/src/components/course/Navigation/Unit/UnitNavigation/Navigation.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/UnitNavigation/Navigation.less
@@ -4,6 +4,7 @@
   width: 360px;
   max-width: 360px;
   max-height: calc(100vh - @headerHeight - @headerDivider - 10px);
+  position: relative;
   flex-shrink: 0;
   overflow-y: auto;
 }
