--- a/src/Frontend/src/components/cards/UnitPage/unitPage.less
+++ b/src/Frontend/src/components/cards/UnitPage/unitPage.less
@@ -7,12 +7,16 @@
   font-weight: normal;
 }
 
-.progressBar {
-  position: relative;
-  top: 15px;
-}
-
 .shortQuestions {
   position: relative;
   top: 25px;
+}
+
+.progressBarTitle {
+  color: @additionalColor;
+  font-family: @defaultFonts;
+  font-size: 10px;
+  line-height: 30px;
+  letter-spacing: 1.2px;
+  text-transform: uppercase;
 }
