Refactor models to fir swagger documentation
Changed fields name,refactor stories to fit for new fields

--- a/src/Frontend/src/components/cards/ProgressBar/progressBar.less
+++ b/src/Frontend/src/components/cards/ProgressBar/progressBar.less
@@ -15,27 +15,27 @@
   line-height: 30px;
 }
 
-.statusUnseen {
+.notRated {
   order: 1;
   background: @statusUnseenColor;
 }
 
-.statusVeryBad {
+.rate1 {
   background: @statusVeryBadColor;
 }
 
-.statusBad {
+.rate2 {
   background: @statusBadColor
 }
 
-.statusAverage {
+.rate3 {
   background: @statusAverageColor
 }
 
-.statusGood {
+.rate4 {
   background: @statusGoodColor
 }
 
-.statusExcellent {
+.rate5 {
   background: @statusExcellentColor
 }
