html + css refactor

--- a/src/Frontend/src/components/cards/UnitPage/ShortQuestions/shortQuestions.less
+++ b/src/Frontend/src/components/cards/UnitPage/ShortQuestions/shortQuestions.less
@@ -7,6 +7,8 @@
 
 .questionsContainer {
   display: flex;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .questionsTextContainer {
@@ -50,7 +52,6 @@
 }
 
 .answerText {
-  margin-top: 10px;
   color: #717171;
   font-size: @answerFontSize;
 }
