--- a/src/Frontend/src/components/cards/CoursePage/CourseCards/courseCards.less
+++ b/src/Frontend/src/components/cards/CoursePage/CourseCards/courseCards.less
@@ -40,9 +40,6 @@
   padding: 32px;
 
   text-align: center;
-}
-
-.emptyUnitCardText{
   font-family: @defaultFonts;
   color: @additionalColor;
   font-size: 16px;
@@ -77,6 +74,7 @@
 }
 
 .unitCardBody {
+  margin: 0;
   font-size: 14px;
   line-height: 1.4;
 }
