--- a/src/Frontend/src/components/cards/ProgressBar/progressBar.less
+++ b/src/Frontend/src/components/cards/ProgressBar/progressBar.less
@@ -1,13 +1,17 @@
 @import "../../../variables";
 
 .progressBarContainer {
-  display: flex;
-  align-items: stretch;
+  width: 100%;
   max-height: 32px;
+
+  display: flex;
+
+  margin: 0;
+  padding: 0;
 }
 
 .progressBarElement {
-  color: white;
+  color: #fff;
   overflow: hidden;
   font-family: @defaultFonts;
   text-align: center;
