--- a/src/Frontend/src/components/cards/Flashcards/Results/results.less
+++ b/src/Frontend/src/components/cards/Flashcards/Results/results.less
@@ -2,6 +2,7 @@
 
 .resultsContainer {
   font-family: @defaultFonts;
+  height: 141px;
 }
 
 .headerText {
@@ -10,6 +11,10 @@
 }
 
 .footer {
+  height: 30px;
+
+  padding-left: 18px;
+
   color: @additionalColor;
   font-size: 10px;
   line-height: 30px;
@@ -17,11 +22,14 @@
 }
 
 .footerLine {
-  width: 310px;
+  width: 280px;
   height: 0;
 
+  display: inline-block;
+
+  border: 1px solid;
+  margin: 0 9px;
   opacity: 0.2;
-  border: 2px solid #000000;
 }
 
 .resultsElement {
