--- a/src/Frontend/src/components/course/Navigation/Unit/UnitNavigation/Navigation.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/UnitNavigation/Navigation.less
@@ -1,10 +1,18 @@
 @import "../../../../../variables.less";
 
 .root {
+  position: relative;
   width: 360px;
   max-width: 360px;
   max-height: calc(100vh - @headerHeight - @headerDivider - 10px);
-  position: relative;
   flex-shrink: 0;
+}
+
+.contentWrapper {
+  position: fixed;
   overflow-y: auto;
+  top: calc(@headerHeight + @headerDivider);
+  left: 10px;
+  max-height: calc(100vh - @headerHeight - @headerDivider - 10px);
+
 }
