--- a/src/Frontend/src/components/course/Navigation/Unit/NextUnit/NextUnit.less
+++ b/src/Frontend/src/components/course/Navigation/Unit/NextUnit/NextUnit.less
@@ -13,4 +13,15 @@
   box-shadow: none;
   text-align: left;
   padding: 13px 12px 20px 24px;
+  cursor: pointer;
+}
+
+.header {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: lighter;
+  line-height: 1.2;
+  letter-spacing: 1.2px;
+  color: @additionalColor;
 }
