--- a/src/Frontend/src/components/cards/Flashcards/flashcards.less
+++ b/src/Frontend/src/components/cards/Flashcards/flashcards.less
@@ -46,10 +46,6 @@
   animation: appear 300ms;
 }
 
-.appear {
-  animation: appear 300ms;
-}
-
 @keyframes appear {
   from {
     opacity: 0;
@@ -163,10 +159,14 @@
 
 @keyframes moveFromSecondToFirst {
   from {
-    .secondModal;
+    transform: translate(-50%, -56%) scale(0.95);
+    z-index: -1;
+    background: darken(@modalBackgroundColor, 10%);
   }
   to {
-    .modal;
+    z-index: 0;
+    transform: translate(-50%, -50%);
+    background: @modalBackgroundColor;
   }
 }
 
@@ -183,10 +183,14 @@
 
 @keyframes moveFromThirdToSecond {
   from {
-    .thirdModal
+    transform: translate(-50%, -62%) scale(0.90);
+    z-index: -2;
+    background: darken(@modalBackgroundColor, 15%);
   }
   to {
-    .secondModal
+    transform: translate(-50%, -56%) scale(0.95);
+    z-index: -1;
+    background: darken(@modalBackgroundColor, 10%);
   }
 }
 
@@ -203,10 +207,14 @@
 
 @keyframes moveFromFourthToThird {
   from {
-    .fourthModal
+    transform: translate(-50%, -68%) scale(0.85);
+    z-index: -3;
+    background: darken(@modalBackgroundColor, 18%);
   }
   to {
-    .thirdModal
+    transform: translate(-50%, -62%) scale(0.90);
+    z-index: -2;
+    background: darken(@modalBackgroundColor, 15%);
   }
 }
 
