Flashcards fully integrated to App
Added redux connections, actions, reducer update etc.
Added routing func component.
Refactored flashcards pages styles.
Added buildQuery to utils
Added flashcards guides const

--- a/src/Frontend/src/components/flashcards/CoursePage/coursePage.less
+++ b/src/Frontend/src/components/flashcards/CoursePage/coursePage.less
@@ -1,6 +1,6 @@
 @import "./../../../variables";
 
-.textContainer{
+.textContainer {
   font-family: @defaultFonts;
   position: relative;
 }
@@ -23,4 +23,12 @@
   position: absolute;
   right: 28px;
   top: 14px;
+}
+
+.pageContainer {
+  width: 100%;
+  max-width: 862px;
+
+  margin-left: 32px;
+  margin-top: 40px;
 }
