--- a/src/Frontend/src/components/flashcards/UnitPage/unitPage.less
+++ b/src/Frontend/src/components/flashcards/UnitPage/unitPage.less
@@ -13,7 +13,8 @@
 }
 
 .progressBarTitle {
-  margin-top: 10px;
+  margin-top: 35px;
+  margin-bottom: 5px;
 
   color: @additionalColor;
   font-family: @defaultFonts;
@@ -21,4 +22,12 @@
   line-height: 30px;
   letter-spacing: 1.2px;
   text-transform: uppercase;
+}
+
+.pageContainer {
+  width: 100%;
+  max-width: 862px;
+
+  margin-left: 32px;
+  margin-top: 20px;
 }
